<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <QuickContactBadge
        android:id="@+id/quickContactBadge1"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/currAbsLayoutTextView"
        android:layout_below="@+id/currAbsLayoutTextView"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="22dp"
        android:text="@string/curr_abs_val"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/currAbsLayoutTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="50dp"
        android:text="@string/curr_Abs_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/sp_nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/currAbsLayoutTextView"
        android:layout_below="@+id/quickContactBadge1"
        android:layout_marginTop="23dp"
        android:text="@string/stud_Name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/LastAttendedLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/currAbsLayoutTextView"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="42dp"
        android:text="@string/lastAttendedLabel"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/currentAbsencesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/LastAttendedLabelTextView"
        android:layout_marginTop="27dp"
        android:text="@string/LastAttendedValue"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="35sp" />

</RelativeLayout>
