<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login_Activity" >

    <EditText
        android:id="@+id/editpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="192dp"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edituser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editpass"
        android:layout_alignLeft="@+id/editpass"
        android:layout_marginBottom="81dp"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName"
       />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editpass"
        android:layout_below="@+id/editpass"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="77dp"
        android:text="@string/submit" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/submit"
        android:layout_alignBottom="@+id/submit"
        android:layout_alignRight="@+id/edituser"
        android:layout_marginRight="18dp"
        android:text="@string/cancel" />

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/submit"
        android:layout_alignRight="@+id/editpass"
        android:layout_below="@+id/editpass"
        android:layout_marginTop="28dp" />

</RelativeLayout>
